--- a/ttysnoop-0.12c/Makefile
+++ b/ttysnoop-0.12c/Makefile
@@ -1,4 +1,4 @@
-#
+	#
 # Makefile for the ttysnoop programs
 #
 
@@ -43,7 +43,7 @@ clean:
 install:
 		install -s ttysnoop ${DESTDIR}/${PREFIX}/sbin
 		install -s ttysnoops ${DESTDIR}/${PREFIX}/sbin
-		install -m 644 ttysnoop.8 /usr/man/man8/
-		cp snooptab.dist /${DESTDIR}/${PREFIX}/etc/snooptab
+		install -m 644 ttysnoop.8 ${DESTDIR}/usr/man/man8/
+		cp snooptab.dist ${DESTDIR}/${PREFIX}/etc/snooptab
 		@echo ... copy snooptab.dist to /etc/snooptab and edit it ...
  
